[gd_scene load_steps=7 format=3 uid="uid://6u4fe7lauw5g"]

[ext_resource type="Texture2D" uid="uid://bf4cfhoo43e8v" path="res://assets/home/lazienka1/the-scariest-jumpscare.jpg" id="1_ln3oj"]
[ext_resource type="Script" path="res://scenes/house/jumpscare_baluszkowo_sobolewski.gd" id="2_3pp5j"]
[ext_resource type="AudioStream" uid="uid://clmnnveirm4vh" path="res://assets/sounds/jumpscare.mp3" id="3_svmbp"]

[sub_resource type="Animation" id="Animation_jtp0o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lcvii"]
resource_name = "jumpscare"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3rcns"]
_data = {
"RESET": SubResource("Animation_jtp0o"),
"jumpscare": SubResource("Animation_lcvii")
}

[node name="JumpscareBaluszkowoSobolewski" type="Sprite2D"]
modulate = Color(1, 0, 0, 0)
position = Vector2(352, 255.5)
scale = Vector2(0.216001, 0.298)
texture = ExtResource("1_ln3oj")
script = ExtResource("2_3pp5j")

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3rcns")
}

[node name="Boo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_svmbp")
volume_db = -10.0

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
